# Oculora

./: .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.py  server.py  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md  oculora-bug-report-template.md  oculora-feature-request.md
.github/workflows/: docker-publish.yml  python-package.yml
config/: config.py
routers/: batch_handler.py  channel_handler.py  comments_handler.py  download_handler.py  extract_handler.py  extractor_util.py  health_handler.py  playlist_handler.py  proxy_handler.py  related_handler.py  search_handler.py  stream_direct_handler.py  transcode_handler.py  ytdlp_handler.py
tests/: test_health.py
