[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculora"
version = "0.1.0"
description = "Oculora Python package"
authors = [{ name = "yunfie", email = "yunfie.twitter+3@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "yt-dlp",
    "aiocache",
    "selenium",
    "webdriver-manager",
    "selenium-stealth",
    "psutil",
    "python-dotenv",
    "pytest",
    "pytest-asyncio"
]
